--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,8 @@
 @import "mocha.css";
 
 * {
+  border: none;
+  border-radius: 0;
   font-family: JetBrains Mono;
   font-size: 16px;
   min-height: 0;
@@ -9,55 +11,64 @@
 #waybar {
   background: transparent;
   color: @text;
-  margin: 5px 5px;
+  /* margin: 5px 5px; */
 }
 
 #workspaces {
-  border-radius: 1rem;
+  border-radius: 8px;
   padding-left: 8px;
   padding-right: 8px;
-  margin: 5px;
-  background-color: @surface0;
-  margin-left: 1rem;
+  /* margin: 5px; */
+  /* margin-left: 1rem; */
+  background: @base;
 }
 
 #workspaces button {
-  color: @lavender;
-  border-radius: 1rem;
+  color: @surface2;
   padding: 0.4rem;
+  animation: gradient_f 20s ease-in infinite;
+  transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
 }
 
 #workspaces button.active {
-  color: @green;
-  border-radius: 1rem;
+  color: @mauve;
+  animation: gradient_f 20s ease-in infinite;
+  transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
 }
 
 #workspaces button:hover {
   background: transparent;
-  border-color: transparent;
-  color: @sapphire;
-  border-radius: 1rem;
+  color: @lavender;
+  animation: gradient_f 20s ease-in infinite;
+  transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
 }
 
-#custom-music,
-#tray,
-#backlight,
-#clock,
-#battery,
-#pulseaudio,
-#custom-lock,
-#language,
-#network,
-#custom-power {
-  background-color: @surface0;
-  padding: 0.5rem 1rem;
-  margin: 5px 0;
+.modules-left {
+  border-radius: 8px;
+  padding: 8px 16px;
+  background: @base;
+}
+
+.modules-right {
+  border-radius: 8px;
+  background: @base;
+}
+
+#tray {
+  border-radius: 8px;
+  padding: 8px 16px;
+  background: @crust;
+}
+
+#cpu, #memory, #disk {
+  color: @overlay0;
+  padding-left: 12px;
 }
 
 #clock {
-  color: @blue;
-  border-radius: 0px 1rem 1rem 0px;
-  margin-right: 1rem;
+  padding-left: 12px;
+  padding-right: 12px;
+  color: @overlay2;
 }
 
 #battery {
@@ -69,40 +80,25 @@
 }
 
 #battery.warning:not(.charging) {
+  color: @peach;
+}
+
+#battery.critical:not(.charging) {
   color: @red;
 }
 
-#backlight {
-  color: @yellow;
-}
-
-#backlight, #battery {
-    border-radius: 0;
-}
-
-#pulseaudio {
-  color: @maroon;
-  border-radius: 1rem 0px 0px 1rem;
+#pulseaudio, #language, #network {
+  color: @overlay2;
   margin-left: 1rem;
 }
 
-#custom-music {
-  color: @mauve;
-  border-radius: 1rem;
-}
-
 #custom-lock {
-    border-radius: 1rem 0px 0px 1rem;
-    color: @lavender;
+    padding-right: 1rem;
+    color: @surface2;
 }
 
 #custom-power {
     margin-right: 1rem;
     border-radius: 0px 1rem 1rem 0px;
     color: @red;
-}
-
-#tray {
-  margin-right: 1rem;
-  border-radius: 1rem;
 }
