--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,104 +1,1 @@
-@import "mocha.css";
-
-* {
-  border: none;
-  border-radius: 0;
-  font-family: JetBrains Mono;
-  font-size: 16px;
-  min-height: 0;
-}
-
-#waybar {
-  background: transparent;
-  color: @text;
-  /* margin: 5px 5px; */
-}
-
-#workspaces {
-  border-radius: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
-  /* margin: 5px; */
-  /* margin-left: 1rem; */
-  background: @base;
-}
-
-#workspaces button {
-  color: @surface2;
-  padding: 0.4rem;
-  animation: gradient_f 20s ease-in infinite;
-  transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-#workspaces button.active {
-  color: @mauve;
-  animation: gradient_f 20s ease-in infinite;
-  transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-#workspaces button:hover {
-  background: transparent;
-  color: @lavender;
-  animation: gradient_f 20s ease-in infinite;
-  transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-.modules-left {
-  border-radius: 8px;
-  padding: 8px 16px;
-  background: @base;
-}
-
-.modules-right {
-  border-radius: 8px;
-  background: @base;
-}
-
-#tray {
-  border-radius: 8px;
-  padding: 8px 16px;
-  background: @crust;
-}
-
-#cpu, #memory, #disk {
-  color: @overlay0;
-  padding-left: 12px;
-}
-
-#clock {
-  padding-left: 12px;
-  padding-right: 12px;
-  color: @overlay2;
-}
-
-#battery {
-  color: @green;
-}
-
-#battery.charging {
-  color: @green;
-}
-
-#battery.warning:not(.charging) {
-  color: @peach;
-}
-
-#battery.critical:not(.charging) {
-  color: @red;
-}
-
-#pulseaudio, #language, #network {
-  color: @overlay2;
-  margin-left: 1rem;
-}
-
-#custom-lock {
-    padding-right: 1rem;
-    color: @surface2;
-}
-
-#custom-power {
-    margin-right: 1rem;
-    border-radius: 0px 1rem 1rem 0px;
-    color: @red;
-}
+@import "style-p4p1.css";
